* fix group dropdown display * fix move table into group --> no more overlap between panel caption and table

--- a/src/main/webapp/styles.css
+++ b/src/main/webapp/styles.css
@@ -216,6 +216,7 @@ tr>td {
 
 #groups-dropdown-list{
     padding-top: 5px;
+    width: max-content;
 }
 
 .table-panel{
